--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,7 @@ License: Artistic 2.0
 Encoding: UTF-8
 LazyData: true
 Imports:
-    dplyr,
-    ggplot2
+    repmis,
+    ggplot2,
+    RColorBrewer
 RoxygenNote: 6.0.1
