--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,16 +6,16 @@ Author: person("Ibon", "Tamayo", email = "ibontama@gmail.com", role = c("aut", "
 Maintainer: Ibon Tamayo <itamuria@gmail.com>
 Description: An R Package for Estimating Individual and Average Joint Effects of Chemical Mixtures, 
     Dose-Response Relationships, and Potential Interactions in Environmental Epidemiology
-License: Artistic 2.0
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
     repmis,
     ggplot2,
     RColorBrewer,
-    ggplot2, 
+    ggplot2,
     repmis,
-    SuperLearner, 
+    SuperLearner,
     gam,
     splines,
     foreach,
@@ -24,5 +24,8 @@ Imports:
     nnet,
     polspline,
     e1071,
-    xgboost
+    xgboost,
+    Rcpp
 RoxygenNote: 6.1.0
+LinkingTo: 
+    Rcpp
