--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: expose
 Type: Package
-Title: Multiple effects of chemicals in Environmental Epidemiology
+Title: Multiple effect estimation of chemicals in Environmental Epidemiology
 Version: 0.0.2
 Author: person("Ibon", "Tamayo", email = "ibontama@gmail.com", role = c("aut", "cre"))
 Maintainer: Ibon Tamayo <itamuria@gmail.com>
@@ -10,8 +10,6 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Imports:
-    repmis,
-    ggplot2,
     RColorBrewer,
     ggplot2,
     repmis,
