--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.0.3
 Authors@R: person("Ibon", "Tamayo", email = "itamuria@gmail.com",
                   role = c("aut", "cre"))
 Description: Estimate individual and average joint effects of chemical mixtures, dose-response relationships, and potential interactions in environmental epidemiology.
-    The visualization of interactions and the plotting of all the objects. For more information please, check next work: Youssef Oulhote, Marie-Abele Bind, Brent Coull, Chirag, Patel, Philippe Grandjean (2017) <arXiv:https://www.biorxiv.org/content/early/2017/06/30/147413.article-info>.
+    The visualization of interactions and the plotting of all the objects. For more information please, check next work: Youssef Oulhote, Marie-Abele Bind, Brent Coull, Chirag, Patel, Philippe Grandjean (2017) <https://www.biorxiv.org/content/early/2017/06/30/147413.article-info>.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
