--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,10 @@
 language: r
 
-sudo: required
-
-env: _R_CHECK_CRAN_INCOMING_=FALSE
-
 r_packages:
   - covr
-  - devtools
 
 r_github_packages:
-  - codecov/expose
+  - itamuria/expose
 
 after_success:
   - Rscript -e 'library(covr);codecov()'
